--- a/src/style.css
+++ b/src/style.css
@@ -131,12 +131,12 @@ body {
 }
 
 /* Ad Container */
-.ad-container {
+.sponsor-container {
   width: 100%;
   max-width: 400px;
 }
 
-.ad-placeholder {
+.sponsor-placeholder {
   width: 100%;
   height: 100px;
   background: var(--bg-card);
